--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "h3-js": "^4.4.0",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.19.0",
+    "motion": "^12.34.3",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
